--- a/src/main/resources/com/controledereagentes/app-view.fxml
+++ b/src/main/resources/com/controledereagentes/app-view.fxml
@@ -1,91 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<BorderPane prefHeight="900.0"
-            prefWidth="1200.0"
-            stylesheets="@styles.css"
-            xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.controledereagentes.controllers.MainMenuController">
+
+<BorderPane prefHeight="900.0" prefWidth="1200.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controledereagentes.controllers.MainMenuController">
 
     <center>
-        <VBox fx:id="centerVBox"
-              alignment="CENTER"
-              prefHeight="102.0"
-              prefWidth="595.0"
-              spacing="20.0"
-              styleClass="appContainer">
+        <VBox fx:id="centerVBox" alignment="CENTER" prefHeight="102.0" prefWidth="595.0" spacing="20.0" styleClass="appContainer">
         </VBox>
     </center>
     <left>
-        <GridPane prefWidth="200.0"
-                  styleClass="sidebar"
-                  BorderPane.alignment="CENTER">
+        <GridPane prefWidth="200.0" styleClass="sidebar" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES"
-                                   minWidth="10.0"
-                                   prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="300.0"
-                                minHeight="10.0"
-                                prefHeight="30.0"
-                                vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="50.0"
-                                minHeight="50.0"
-                                prefHeight="50.0"
-                                vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="60.0"
-                                minHeight="60.0"
-                                prefHeight="60.0"
-                                vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="60.0"
-                                minHeight="60.0"
-                                prefHeight="60.0"
-                                vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="300.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="60.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ImageView cache="true"
-                           fitHeight="256.0"
-                           fitWidth="742.0"
-                           pickOnBounds="true"
-                           preserveRatio="true"
-                           GridPane.halignment="CENTER"
-                           GridPane.valignment="TOP">
+            <Button maxHeight="40.0" maxWidth="40.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="40.0" prefWidth="40.0" GridPane.halignment="LEFT" GridPane.rowIndex="7" GridPane.valignment="BOTTOM">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/logout_icon.png" />
+                     </image>
+                     <effect>
+                        <Glow level="0.21" />
+                     </effect>
+                  </ImageView>
+               </graphic>
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </GridPane.margin>
+            </Button>
+                <ImageView cache="true" fitHeight="256.0" fitWidth="742.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="TOP">
                     <image>
                         <Image url="@assets/logo_white.png" />
                     </image>
                     <GridPane.margin>
                         <Insets top="20.0" />
                     </GridPane.margin>
+               <effect>
+                  <InnerShadow />
+               </effect>
                 </ImageView>
-                <Text strokeType="OUTSIDE"
-                      strokeWidth="0.0"
-                      styleClass="title"
-                      text="Menu Principal"
-                      GridPane.halignment="CENTER"
-                      GridPane.rowIndex="1"
-                      GridPane.valignment="CENTER">
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Menu Principal" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                     <font>
-                        <Font name="System Bold"
-                              size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                     </font>
                 </Text>
-                <Button onAction="#onFornecedoresButtonClick"
-                        prefHeight="40.0"
-                        prefWidth="150.0"
-                        styleClass="button"
-                        text="Gerir Fornecedores"
-                        GridPane.halignment="CENTER"
-                        GridPane.rowIndex="2"
-                        GridPane.valignment="CENTER">
+                <Button onAction="#onFornecedoresButtonClick" prefHeight="40.0" prefWidth="180.0" styleClass="button" text="Fornecedores" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -93,14 +76,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-                <Button onAction="#onNfesButtonClick"
-                        prefHeight="40.0"
-                        prefWidth="150.0"
-                        styleClass="button"
-                        text="Gerir NF-es"
-                        GridPane.halignment="CENTER"
-                        GridPane.rowIndex="3"
-                        GridPane.valignment="CENTER">
+                <Button onAction="#onNfesButtonClick" prefHeight="40.0" prefWidth="180.0" styleClass="button" text="Notas Fiscais" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -108,6 +84,30 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+            <Button onAction="#onNfesButtonClick" prefHeight="40.0" prefWidth="180.0" styleClass="button" text="Lotes de Compra" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button onAction="#onNfesButtonClick" prefHeight="40.0" prefWidth="180.0" styleClass="button" text="Tipos de Reagentes" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button onAction="#onNfesButtonClick" prefHeight="40.0" prefWidth="180.0" styleClass="button" text="Solicitações de Compra" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
             </children>
         </GridPane>
     </left>
