--- a/src/main/resources/com/controledereagentes/dialogs/nfes/edit.fxml
+++ b/src/main/resources/com/controledereagentes/dialogs/nfes/edit.fxml
@@ -1,60 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane fx:id="window"
-            maxHeight="260.0"
-            maxWidth="260.0"
-            minWidth="260.0"
-            onMouseDragged="#onMouseDragged"
-            onMousePressed="#onMousePressed"
-            styleClass="dialogContainer"
-            stylesheets="@../dialogs.css"
-            xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.controledereagentes.controllers.nfes.EditController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane fx:id="window" maxWidth="260.0" minWidth="260.0" onMouseDragged="#onMouseDragged" onMousePressed="#onMousePressed" styleClass="dialogContainer" stylesheets="@../dialogs.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controledereagentes.controllers.nfes.EditController">
     <center>
-        <VBox prefWidth="240.0"
-              spacing="20.0"
-              BorderPane.alignment="CENTER">
+        <VBox prefWidth="240.0" spacing="20.0" BorderPane.alignment="CENTER">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
             <BorderPane.margin>
-                <Insets bottom="10.0"
-                        left="10.0"
-                        right="10.0"
-                        top="10.0" />
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </BorderPane.margin>
             <VBox>
                 <children>
-                    <Label styleClass="commonText"
-                           text="Razão Social">
+                    <Label styleClass="commonText" text="Número">
                         <padding>
-                            <Insets bottom="4.0"
-                                    left="2.0" />
+                            <Insets bottom="4.0" left="2.0" />
                         </padding>
                     </Label>
-                    <TextField fx:id="razao_social_input"
-                               styleClass="input"
-                               text="PLACEHOLDER">
+                    <TextField fx:id="numero_input" styleClass="input" text="PLACEHOLDER">
                     </TextField>
                 </children>
             </VBox>
             <VBox>
                 <children>
-                    <Label styleClass="commonText"
-                           text="CNPJ">
+                    <Label styleClass="commonText" text="Data de Emissão">
                         <padding>
-                            <Insets bottom="4.0"
-                                    left="2.0" />
+                            <Insets bottom="4.0" left="2.0" />
                         </padding>
                     </Label>
-                    <TextField fx:id="cnpj_input"
-                               styleClass="input"
-                               text="PLACEHOLDER">
-                    </TextField>
+                    <DatePicker fx:id="data_emissao_input" editable="false" prefHeight="30.0" prefWidth="238.0" styleClass="input, datepicker" />
+                </children>
+            </VBox>
+            <VBox>
+                <children>
+                    <Label styleClass="commonText" text="Fornecedor">
+                        <padding>
+                            <Insets bottom="4.0" left="2.0" />
+                        </padding>
+                    </Label>
+                    <ComboBox fx:id="fornecedor_input" prefHeight="30.0" prefWidth="238.0" styleClass="input, combobox" />
                 </children>
             </VBox>
         </VBox>
@@ -64,38 +59,15 @@
             <children>
                 <GridPane>
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES"
-                                           minWidth="10.0"
-                                           prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES"
-                                           minWidth="10.0"
-                                           prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0"
-                                        prefHeight="40.0"
-                                        vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                    <Button maxWidth="100.0"
-                            minWidth="100.0"
-                            mnemonicParsing="false"
-                            onAction="#onConfirmButtonClick"
-                            prefWidth="100.0"
-                            styleClass="button"
-                            text="Confirmar"
-                            GridPane.halignment="CENTER"
-                            GridPane.valignment="CENTER">
+                    <Button maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#onConfirmButtonClick" prefWidth="100.0" styleClass="button" text="Confirmar" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                     </Button>
-                    <Button maxWidth="100.0"
-                            minWidth="100.0"
-                            mnemonicParsing="false"
-                            onAction="#onCancelButtonClick"
-                            prefWidth="100.0"
-                            styleClass="button"
-                            text="Cancelar"
-                            GridPane.columnIndex="1"
-                            GridPane.halignment="CENTER"
-                            GridPane.valignment="CENTER">
+                    <Button maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#onCancelButtonClick" prefWidth="100.0" styleClass="button" text="Cancelar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                     </Button>
                     <VBox.margin>
                         <Insets bottom="10.0" />
@@ -103,38 +75,24 @@
                 </GridPane>
                 <GridPane>
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES"
-                                           minWidth="10.0"
-                                           prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0"
-                                        prefHeight="40.0"
-                                        vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0"
-                                        vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button maxWidth="100.0"
-                                minWidth="100.0"
-                                mnemonicParsing="false"
-                                onAction="#onDeleteButtonClick"
-                                prefWidth="100.0"
-                                styleClass="buttonDelete"
-                                text="Excluir"
-                                GridPane.halignment="CENTER"
-                                GridPane.valignment="CENTER">
+                        <Button maxWidth="100.0" minWidth="100.0" mnemonicParsing="false" onAction="#onDeleteButtonClick" prefWidth="100.0" styleClass="buttonDelete" text="Excluir" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                         </Button>
-                        <Label fx:id="errorMessage"
-                               styleClass="commonText"
-                               GridPane.halignment="CENTER"
-                               GridPane.rowIndex="1"
-                               GridPane.valignment="CENTER">
+                        <Label fx:id="errorMessage" styleClass="commonText" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                         </Label>
                     </children>
                     <VBox.margin>
                         <Insets bottom="10.0" />
                     </VBox.margin>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
                 </GridPane>
             </children>
         </VBox>
