--- a/src/main/resources/com/controledereagentes/tables/nfes.fxml
+++ b/src/main/resources/com/controledereagentes/tables/nfes.fxml
@@ -1,88 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<BorderPane maxHeight="-Infinity"
-            maxWidth="-Infinity"
-            minHeight="-Infinity"
-            minWidth="-Infinity"
-            prefHeight="800.0"
-            prefWidth="1280.0"
-            styleClass="tableContainer"
-            stylesheets="@tables.css"
-            xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.controledereagentes.controllers.nfes.TableController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<BorderPane maxHeight="800.0" maxWidth="1280.0" minHeight="400.0" minWidth="600.0" prefHeight="800.0" prefWidth="1280.0" styleClass="tableContainer" stylesheets="@tables.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controledereagentes.controllers.nfes.TableController">
     <center>
-        <TableView fx:id="nfesTable"
-                   prefHeight="200.0"
-                   prefWidth="200.0"
-                   styleClass="tableView"
-                   BorderPane.alignment="CENTER">
+        <TableView fx:id="nfesTable" prefHeight="200.0" prefWidth="200.0" styleClass="tableView" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="id"
-                             maxWidth="400.0"
-                             minWidth="100.0"
-                             prefWidth="-1.0"
-                             text="ID" />
-                <TableColumn fx:id="numero"
-                             maxWidth="400.0"
-                             minWidth="100.0"
-                             prefWidth="-1.0"
-                             text="Numero" />
-                <TableColumn fx:id="data_emissao"
-                             maxWidth="400.0"
-                             minWidth="140.0"
-                             prefWidth="-1.0"
-                             text="Data de Emissão" />
-                <TableColumn fx:id="razao_social"
-                             maxWidth="600.0"
-                             minWidth="400.0"
-                             prefWidth="429.0"
-                             text="Razão Social" />
-                <TableColumn fx:id="cnpj"
-                             maxWidth="400.0"
-                             minWidth="171.0"
-                             prefWidth="171.0"
-                             text="CNPJ" />
+                <TableColumn fx:id="id" maxWidth="400.0" minWidth="100.0" prefWidth="-1.0" text="ID" />
+                <TableColumn fx:id="numero" maxWidth="400.0" minWidth="100.0" prefWidth="-1.0" text="Número" />
+                <TableColumn fx:id="data_emissao" maxWidth="400.0" minWidth="140.0" prefWidth="-1.0" text="Data de Emissão" />
+                <TableColumn fx:id="razao_social" maxWidth="600.0" minWidth="400.0" prefWidth="429.0" text="Razão Social" />
+                <TableColumn fx:id="cnpj" maxWidth="400.0" minWidth="171.0" prefWidth="171.0" text="CNPJ" />
             </columns>
             <BorderPane.margin>
-                <Insets bottom="4.0"
-                        left="10.0"
-                        right="10.0" />
+                <Insets bottom="4.0" left="10.0" right="10.0" />
             </BorderPane.margin>
         </TableView>
     </center>
     <top>
-        <GridPane alignment="CENTER"
-                  BorderPane.alignment="CENTER">
+        <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES"
-                                   minWidth="10.0"
-                                   prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES"
-                                   minWidth="10.0"
-                                   prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0"
-                                prefHeight="30.0"
-                                vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button fx:id="newButton"
-                        mnemonicParsing="false"
-                        onAction="#onNewNfeButtonClick"
-                        prefHeight="40.0"
-                        prefWidth="150.0"
-                        styleClass="button"
-                        text="Incluir Novo"
-                        GridPane.columnIndex="1"
-                        GridPane.halignment="RIGHT"
-                        GridPane.valignment="CENTER">
+                <Button fx:id="newButton" mnemonicParsing="false" onAction="#onNewNfeButtonClick" prefHeight="40.0" prefWidth="150.0" styleClass="button" text="Incluir Novo" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -90,45 +46,28 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-                <Text boundsType="VISUAL"
-                      strokeType="OUTSIDE"
-                      strokeWidth="0.0"
-                      styleClass="title"
-                      text="Notas Fiscais"
-                      textOrigin="CENTER"
-                      wrappingWidth="243.419921875"
-                      GridPane.halignment="LEFT"
-                      GridPane.valignment="CENTER">
+                <Text boundsType="VISUAL" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Notas Fiscais" textOrigin="CENTER" wrappingWidth="243.419921875" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                     <font>
-                        <Font name="System Bold"
-                              size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                     </font>
                 </Text>
             </children>
             <BorderPane.margin>
-                <Insets bottom="10.0"
-                        left="12.0"
-                        right="10.0"
-                        top="20.0" />
+                <Insets bottom="10.0" left="12.0" right="10.0" top="20.0" />
             </BorderPane.margin>
         </GridPane>
     </top>
     <bottom>
         <VBox BorderPane.alignment="CENTER">
             <children>
-                <Text strokeType="OUTSIDE"
-                      strokeWidth="0.0"
-                      styleClass="commonText"
-                      text="Dica: Para editar um item, clique duas vezes.">
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="commonText" text="Dica: Para editar um item, clique duas vezes.">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Text>
             </children>
             <BorderPane.margin>
-                <Insets bottom="10.0"
-                        left="12.0"
-                        right="10.0" />
+                <Insets bottom="10.0" left="12.0" right="10.0" />
             </BorderPane.margin>
         </VBox>
     </bottom>
